clamav3.pas


//  type
//    clcb_pre_scan = function (fd:longint; var context:pointer):cl_error_t;cdecl;
//    clcb_post_scan = function (fd:longint; result:longint; virname:Pchar; var context:pointer):cl_error_t;cdecl;
//    clcb_sigload = function (_type:Pchar; name:Pchar; var context:pointer):longint;cdecl;
//  var
    cl_engine_set_clcb_pre_scan : procedure(var engine:cl_engine; callback:clcb_pre_scan);cdecl;
    cl_engine_set_clcb_post_scan : procedure(var engine:cl_engine; callback:clcb_post_scan);cdecl;
    cl_engine_set_clcb_sigload : procedure(var engine:cl_engine; callback:clcb_sigload; var context:pointer);cdecl;

  type
    cl_msg =  Longint;
    Const
      CL_MSG_INFO_VERBOSE = 32;
      CL_MSG_WARN = 64;
      CL_MSG_ERROR = 128;


  type

    clcb_msg = procedure (severity:cl_msg; fullmsg:Pchar; msg:Pchar; var context:pointer);cdecl;

  var
    cl_set_clcb_msg : procedure(callback:clcb_msg);cdecl;


  type

    clcb_hash = procedure (fd:longint; size:word; var md5:byte; virname:Pchar; var context:pointer);cdecl;

  var
    cl_engine_set_clcb_hash : procedure(var engine:cl_engine; callback:clcb_hash);cdecl;

  type
//   Pstat  = pointer;
    Pcl_stat = ^cl_stat;
    cl_stat = record
        dir : Pchar;
        stattab : Pstat;
        statdname : ^Pchar;
        entries : dword;
      end;

    Pcl_cvd = ^cl_cvd;
    cl_cvd = record
        time : Pchar;
        version : dword;
        sigs : dword;
        fl : dword;
        md5 : Pchar;
        dsig : Pchar;
        builder : Pchar;
        stime : dword;
      end;

  Type
  Pbytecode_mode  = ^bytecode_mode;
  Pbytecode_security  = ^bytecode_security;
  Pchar  = ^char;
//  Pcl_cvd  = ^cl_cvd;
//  Pcl_engine  = ^cl_engine;
  Pcl_engine_field  = ^cl_engine_field;
//  Pcl_error_t  = ^cl_error_t;
  Pcl_msg  = ^cl_msg;
//  Pcl_settings  = ^cl_settings;
//  Pcl_stat  = ^cl_stat;




  var
    cl_scandesc : function(desc:longint; virname:PPchar; var scanned:dword; var engine:cl_engine; scanoptions:dword):longint;cdecl;
    cl_scandesc_callback : function(desc:longint; virname:PPchar; var scanned:dword; var engine:cl_engine; scanoptions:dword; 
      var context:pointer):longint;cdecl;
    cl_scanfile : function(filename:Pchar; virname:PPchar; var scanned:dword; var engine:cl_engine; scanoptions:dword):longint;cdecl;
    cl_scanfile_callback : function(filename:Pchar; virname:PPchar; var scanned:dword; var engine:cl_engine; scanoptions:dword;
      var context:pointer):longint;cdecl;

    cl_load : function(path:Pchar; var engine:cl_engine; var signo:dword; dboptions:dword):longint;cdecl;
    cl_retdbdir : function:Pchar;cdecl;


    cl_cvdhead : function(cfile:Pchar):Pcl_cvd;cdecl;
    cl_cvdparse : function(head:Pchar):Pcl_cvd;cdecl;
    cl_cvdverify : function(cfile:Pchar):longint;cdecl;
    cl_cvdfree : procedure(var cvd:cl_cvd);cdecl;

    cl_statinidir : function(dirname:Pchar; var dbstat:cl_stat):longint;cdecl;
    cl_statchkdir : function(var dbstat:cl_stat):longint;cdecl;
    cl_statfree : function(var dbstat:cl_stat):longint;cdecl;

    cl_countsigs : function(path:Pchar; countoptions:dword; var sigs:dword):longint;cdecl;

    cl_debug : procedure;cdecl;

    cl_retflevel : function:dword;cdecl;
    cl_retver : function:Pchar;cdecl;

    cl_strerror : function(clerror:longint):Pchar;cdecl;
{$endif}
    Function IsClamAVLibPresent:Boolean;

implementation

  uses
    Windows,SysUtils;

  var
    hlib : HMODULE=0;


  procedure Freeclamav;
    begin
      FreeLibrary(hlib);
      cl_init:=nil;
      cl_engine_new:=nil;
      cl_engine_set_num:=nil;
      cl_engine_get_num:=nil;
      cl_engine_set_str:=nil;
      cl_engine_get_str:=nil;
      cl_engine_settings_copy:=nil;
      cl_engine_settings_apply:=nil;
      cl_engine_settings_free:=nil;
      cl_engine_compile:=nil;
      cl_engine_addref:=nil;
      cl_engine_free:=nil;
      cl_engine_set_clcb_pre_scan:=nil;
      cl_engine_set_clcb_post_scan:=nil;
      cl_engine_set_clcb_sigload:=nil;
      cl_set_clcb_msg:=nil;
      cl_engine_set_clcb_hash:=nil;
      cl_scandesc:=nil;
      cl_scandesc_callback:=nil;
      cl_scanfile:=nil;
      cl_scanfile_callback:=nil;
      cl_load:=nil;
      cl_retdbdir:=nil;
      cl_cvdhead:=nil;
      cl_cvdparse:=nil;
      cl_cvdverify:=nil;
      cl_cvdfree:=nil;
      cl_statinidir:=nil;
      cl_statchkdir:=nil;
      cl_statfree:=nil;
      cl_countsigs:=nil;
      cl_debug:=nil;
      cl_retflevel:=nil;
      cl_retver:=nil;
      cl_strerror:=nil;
    end;
var
  ClamAVVarArray: array of ^Pointer;

procedure PushProc(procvar: Pointer);
var
  L: Integer;
begin
  L := Length(ClamAVVarArray);
  SetLength(ClamAVVarArray, L+1);
  ClamAVVarArray[L] := procvar;
end;


  procedure Loadclamav(lib : PAnsiChar);
      procedure assign_proc(var proc: FARPROC; name: PAnsiChar);
      begin
        proc := GetProcAddress(hlib, name);
        if proc <> nil then
           PushProc(@proc);
      end;
    begin
      Freeclamav;
      hlib:=LoadLibrary(lib);
      if hlib=0 then
        raise Exception.Create(format('Could not load library: %s',[lib]));
      assign_proc(@cl_init,'cl_init');
      assign_proc(@cl_engine_new,'cl_engine_new');
      assign_proc(@cl_engine_set_num,'cl_engine_set_num');
      assign_proc(@cl_engine_get_num,'cl_engine_get_num');
      assign_proc(@cl_engine_set_str,'cl_engine_set_str');
      assign_proc(@cl_engine_get_str,'cl_engine_get_str');
      assign_proc(@cl_engine_settings_copy,'cl_engine_settings_copy');
      assign_proc(@cl_engine_settings_apply,'cl_engine_settings_apply');
      assign_proc(@cl_engine_settings_free,'cl_engine_settings_free');
      assign_proc(@cl_engine_compile,'cl_engine_compile');
      assign_proc(@cl_engine_addref,'cl_engine_addref');
      assign_proc(@cl_engine_free,'cl_engine_free');
      assign_proc(@cl_engine_set_clcb_pre_scan,'cl_engine_set_clcb_pre_scan');
      assign_proc(@cl_engine_set_clcb_post_scan,'cl_engine_set_clcb_post_scan');
      assign_proc(@cl_engine_set_clcb_sigload,'cl_engine_set_clcb_sigload');
      assign_proc(@cl_set_clcb_msg,'cl_set_clcb_msg');
      assign_proc(@cl_engine_set_clcb_hash,'cl_engine_set_clcb_hash');
      assign_proc(@cl_scandesc,'cl_scandesc');
      assign_proc(@cl_scandesc_callback,'cl_scandesc_callback');
      assign_proc(@cl_scanfile,'cl_scanfile');
      assign_proc(@cl_scanfile_callback,'cl_scanfile_callback');
      assign_proc(@cl_load,'cl_load');
      assign_proc(@cl_retdbdir,'cl_retdbdir');
      assign_proc(@cl_cvdhead,'cl_cvdhead');
      assign_proc(@cl_cvdparse,'cl_cvdparse');
      assign_proc(@cl_cvdverify,'cl_cvdverify');
      assign_proc(@cl_cvdfree,'cl_cvdfree');
      assign_proc(@cl_statinidir,'cl_statinidir');
      assign_proc(@cl_statchkdir,'cl_statchkdir');
      assign_proc(@cl_statfree,'cl_statfree');
      assign_proc(@cl_countsigs,'cl_countsigs');
      assign_proc(@cl_debug,'cl_debug');
      assign_proc(@cl_retflevel,'cl_retflevel');
      assign_proc(@cl_retver,'cl_retver');
      assign_proc(@cl_strerror,'cl_strerror');

     
    end;
    
Function IsClamAVLibPresent:Boolean;
begin
  Result := FileExists(External_library);
end;

initialization
  Loadclamav(External_library);
finalization
  Freeclamav;

end.

